--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -112,10 +112,13 @@ input, select, textarea {
 
 	h1, h2, h3, h4, h5, h6 {
 		font-weight: 300;
-		color: #666;
+		color: #dce3e2;
 		line-height: 1.5em;
 	}
 
+	p !important{
+		color: #dce3e2;
+	}
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 		color: inherit;
 		text-decoration: none;
@@ -1755,14 +1758,16 @@ input, select, textarea {
 		}
 
 		.image.avatar48 {
-			width: 48px;
-			height: 48px;
+			width: 135px;
+			height: 135px;
 			background: #f00;
 		}
 
 			.image.avatar48 img {
-				width: 48px;
-				height: 48px;
+				width: 135px;
+			    height: 135px;
+			    padding-right: 0px;
+			    margin-left: 0px;
 			}
 
 		.image.fit {
@@ -1985,7 +1990,7 @@ input, select, textarea {
 	}
 
 		.item header {
-			background: #fff;
+			background: #c74e33;
 			margin: 0;
 			padding: 1em 0 1em 0;
 			font-size: 0.8em;
@@ -2082,7 +2087,7 @@ input, select, textarea {
 
 	#logo {
 		position: relative;
-		margin: 1.75em 1.5em 1.5em 1.5em;
+		margin: 1.75em 1.5em 5.5em 1.5em;
 		min-height: 48px;
 		cursor: default;
 	}
@@ -2091,17 +2096,18 @@ input, select, textarea {
 			position: relative;
 			color: #fff;
 			font-weight: 600;
-			font-size: 1em;
+			font-size: 3.5em;
 			line-height: 1em;
+			padding-top: 5em;
 		}
 
 		#logo p {
 			position: relative;
 			display: block;
 			font-size: 0.6em;
-			color: rgba(255, 255, 255, 0.5);
+			color: #dce3e2;
 			line-height: 1.25em;
-			margin: 0.5em 0 0 0;
+			margin: 2.5em 0 0 0;
 		}
 
 		#logo .image {
@@ -2155,7 +2161,7 @@ input, select, textarea {
 				}
 
 					#nav ul li a.active span:before {
-						color: #e27689;
+						color: #c74e33;
 					}
 
 /* Footer */
@@ -2234,19 +2240,19 @@ input, select, textarea {
 
 			#main > section.one {
 				background-color: #81918E;
-				background-image: url("../../images/banner.jpg");
+				background-image: url("../../images/Kobold_BG2.PNG");
 			}
 
 			#main > section.two {
-				background-color: #f5fafa;
+				background-color: #181a1a;
 			}
 
 			#main > section.three {
-				background-color: #ecf1f1;
+				background-color: #181a1a;
 			}
 
 			#main > section.four {
-				background-color: #e8edec;
+				background-color: #181a1a;
 			}
 
 /* Wide */
@@ -2290,7 +2296,7 @@ input, select, textarea {
 			}
 
 			#main section.cover {
-				padding: 5em 0;
+				padding: 12em 0;
 			}
 
 	}
@@ -2334,7 +2340,7 @@ input, select, textarea {
 
 			#nav ul li a {
 				font-size: 0.8em;
-				padding-top: 0.5em;
+				padding-top: 2.5em;
 				padding-bottom: 0.5em;
 			}
 
