Background color fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2239,7 +2239,7 @@ input, select, textarea {
 			}
 
 			#main > section.one {
-				background-color: #81918E;
+				background-color: #181a1a;
 				background-image: url("../../images/Kobold_BG2.PNG");
 			}
 
