--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2240,7 +2240,7 @@ input, select, textarea {
 
 			#main > section.one {
 				background-color: #181a1a;
-				background-image: url("../../images/Kobold_BG2.PNG");
+				background-image: url("../../images/Kobold_BG2.png");
 			}
 
 			#main > section.two {
